--- a/src/views/homepage.ejs
+++ b/src/views/homepage.ejs
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <h1>Hello world from viewssss</h1>
+    <h1>Hello world from views</h1>
     <p>
         <%= data%>
     </p>
