--- a/src/views/displayCRUD.ejs
+++ b/src/views/displayCRUD.ejs
@@ -19,6 +19,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <style>
+
     table,
     th,
     td {
@@ -69,7 +70,7 @@
                 </td>
                 <td>
                     <a href="/edit-crud?id=<%= dataTable[i].id %>" class="btn btn-outline-warning" type="button">Edit</a>
-                    <a class="btn btn-outline-danger" type="button">Delete</a>
+                    <a href="/delete-crud?id=<%= dataTable[i].id %>" class="btn btn-outline-danger" type="button">Delete</a>
                 </td>
             </tr>
             <% } %>
